Enemy Spawn Multiplayer
Enemies will spawn in the same place with the same material values across server and client.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -207,3 +207,7 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/AGP.EnemyCharacter.SetColourAndGlow",NewName="/Script/AGP.EnemyCharacter.Multicast_SetColourAndGlow")
++FunctionRedirects=(OldName="/Script/AGP.EnemyCharacter.SetMeshSize",NewName="/Script/AGP.EnemyCharacter.Multicast_SetMeshSize")
