--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -207,3 +207,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/AGP.EnemyAgentBeliefs.target",NewName="/Script/AGP.EnemyAgentBeliefs.Target")
