--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-EditorStartupMap=/Game/Levels/MultiplayerMap.MultiplayerMap
+GameDefaultMap=/Game/Levels/Assignment_4_Level.Assignment_4_Level
+EditorStartupMap=/Game/Levels/Assignment_4_Level.Assignment_4_Level
 GameInstanceClass=/Game/Blueprints/GameManagers/BP_AGPGameInstance.BP_AGPGameInstance_C
-GlobalDefaultGameMode=/Game/Blueprints/GameManagers/BP_MultiplayerGameMode.BP_MultiplayerGameMode_C
+GlobalDefaultGameMode=/Script/AGP.GOAPGameMode
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -210,3 +210,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/AGP.EnemyAgentBeliefs.target",NewName="/Script/AGP.EnemyAgentBeliefs.Target")
+
