--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/Levels/Assignment_4_Level.Assignment_4_Level
 EditorStartupMap=/Game/Levels/Assignment_4_Level.Assignment_4_Level
 GameInstanceClass=/Game/Blueprints/GameManagers/BP_AGPGameInstance.BP_AGPGameInstance_C
-GlobalDefaultGameMode=/Script/AGP.GOAPGameMode
+GlobalDefaultGameMode=/Script/AGP.MultiplayerGameMode
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
