--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-EditorStartupMap=/Game/Levels/MultiplayerMap.MultiplayerMap
+GameDefaultMap=/Game/Levels/Ass4Level.Ass4Level
+EditorStartupMap=/Game/Levels/Ass4Level.Ass4Level
 GameInstanceClass=/Game/Blueprints/GameManagers/BP_AGPGameInstance.BP_AGPGameInstance_C
 GlobalDefaultGameMode=/Game/Blueprints/GameManagers/BP_MultiplayerGameMode.BP_MultiplayerGameMode_C
 
@@ -210,3 +210,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/AGP.EnemyAgentBeliefs.target",NewName="/Script/AGP.EnemyAgentBeliefs.Target")
+
