Disabled Friendly Fire; adjusted instakills

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -210,4 +210,5 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/AGP.EnemyAgentBeliefs.target",NewName="/Script/AGP.EnemyAgentBeliefs.Target")
++PropertyRedirects=(OldName="/Script/AGP.EnemyStats.ImmuneToInstaKills",NewName="/Script/AGP.EnemyStats.InstaKillChance")
 
